--- a/services/auth/package.json
+++ b/services/auth/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "amqplib": "^0.10.8",
     "bcryptjs": "^3.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
