--- a/services/file/package.json
+++ b/services/file/package.json
@@ -13,6 +13,7 @@
   "packageManager": "pnpm@10.4.1",
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "cors": "^2.8.5",
     "csv-parser": "^3.2.0",
     "dotenv": "^17.0.0",
     "express": "^5.1.0",
